added bg image for header and played with navbar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-      <a class="navbar-brand" href="#head-top"><img src="images/Logo-Mock-2-1.png" style="width: 40px"></a>
+      <a class="navbar-brand" href="#head-top"><img src="images/icons_horizontal.png"></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,10 +73,10 @@
         <div class="container">
           <div class="row page-header">
             <div class="text-center col-md-6">
-              <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
+              <img src="images/Logo-Mock-1.png" style="width: 75%">
             </div>
             <div class="text-center col-md-6">
-              <img src="images/Logo-Mock-1.png" style="width: 75%">
+              <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
             </div>
           </div> <!-- /.row -->
           <div class="row">
@@ -155,65 +155,7 @@
 	</div>
 	
 	</div><!-- / CONTAINER-->
-	<div class="well">
-		  <div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
-    <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <h3>Rooted in Grace</h3>
-      <p class="lead">
-        “For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” Ephesians 2:8-9
-      </p>
-    </div> 
-  </div>  
-  
-  <div class="row">
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-    <div class="circ-wrap">
-      <i class="icon-question icon-4x"></i>
-    </div>
-          <h3>WHO IS TRAILHEAD CHURCH?</h3>
-          <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville- to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there we move out as a community on mission working to grow God’s kingdom and bring glory to His name.</p>
-        </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="circ-wrap">
-      <i class="icon-user icon-4x"></i>
-      </div>
-          <h3>STORIES OF GRACE</h3>
-          <p class="justify">On a daily basis we encounter people who have tasted God’s grace and want to talk about it. In the video below, meet three families at Trailhead and hear how their stories have been impacted by the grace of God.</p>
-          <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
-       </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-    <div class="circ-wrap">
-      <i class="icon-comment icon-4x"></i>
-      </div>
-          <h3>TELL US YOUR STORY</h3>
-          <p class="justify">We love hearing about how God has worked and is working in the lives of His people. Tell us how you’ve been impacted by the Gospel and shown God’s grace:</p>
-          <div id="contact">
-            <div id="form-wrapper">
-            <div id="form-error" class="form-error"></div>
-            <form role="form" action="">
-              <div class="form-group">
-                <input name="contact-name" type="text" class="form-control" id="contact-name" placeholder="Enter name">
-                <label class="error" for="contact-name" id="name-error">This field is required.</label>
-              </div>
-              <div class="form-group">
-                <input name="contact-email" type="email" class="form-control" id="contact-email" placeholder="Enter email">
-                <label class="error" for="contact-email" id="email-error">A valid email address is required.</label>
-              </div>
-              <div class="form-group">
-                <textarea name="contact-message" class="form-control" id="contact-message" placeholder="Enter your message"></textarea>
-                <label class="error" for="contact-message" id="message-error">This field is required.</label>
-              </div>
-              <button type="submit" class="btn btn-default contact-submit">Submit</button>
-            </form>
-            </div> <!-- /#form-wrapper -->
-          </div> <!-- /#contact -->
-        </div>
-  </div>
-  
-  </div><!-- / CONTAINER-->
-	</div>
+
 </section>
 
 <!-- / SECTION-1 -->
@@ -229,11 +171,11 @@
         What’s the vision for advancing the Gospel in this community and beyond?<br>
         At Trailhead Church, we believe that all who follow Christ are called to a mission of grace.  In order to fulfill that mission, we must be a generous people, a sent people, and a rooted people, and that’s what this campaign is all about.
       </p>
-    </div> 
-  </div>  
+    </div>
+  </div>
     <div class="row">
       <div class="text-center col-xs-12 col-sm-6 col-md-4 col-lg-4">
-        <a href="#"><img class="img-responsive" src="images/iMac.png"></a> 
+        <a href="#"><img class="img-responsive" src="images/iMac.png"></a>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
         <h3>A GENEROUS PEOPLE</h3>
@@ -377,6 +319,7 @@ jQuery(document).ready(function(){
 	//inertia - speed to move relative to vertical scroll. Example: 0.1 is one tenth the speed of scrolling, 2 is twice the speed of scrolling
 	//outerHeight (true/false) - Whether or not jQuery should use it's outerHeight option to determine when a section is in the viewport
 	jQuery('.well').parallax("50%", 0.1);
+  jQuery('#head-top').parallax("50%", 0.3);
 	//jQuery('#section-2').parallax("50%", 0.1);
 	//jQuery('#section-3').parallax("50%", 0.1);
 
