--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+  <script type="text/javascript" src="//use.typekit.net/egu1ykb.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
     <!-- Le styles -->
 <!-- Latest compiled and minified CSS BS 3.0-->
 <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -73,10 +76,11 @@
         <div class="container">
           <div class="row page-header">
             <div class="text-center col-md-6">
-              <img src="images/Logo-Mock-1.png" style="width: 75%">
+              <img src="images/logo-text-sm.png" style="width: 75%">
             </div>
             <div class="text-center col-md-6">
-              <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
+              <!-- <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe> -->
+              <iframe src="//player.vimeo.com/video/74022335" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           </div> <!-- /.row -->
           <div class="row">
@@ -104,7 +108,7 @@
 		<div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<h3>Rooted in Grace</h3>
 			<p class="lead">
-				“For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” Ephesians 2:8-9
+				<em>“For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” </em>-Ephesians 2:8-9
 			</p>
 		</div> 
 	</div>	
@@ -123,7 +127,7 @@
 			</div>
           <h3>STORIES OF GRACE</h3>
           <p class="justify">On a daily basis we encounter people who have tasted God’s grace and want to talk about it. In the video below, meet three families at Trailhead and hear how their stories have been impacted by the grace of God.</p>
-          <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
+<!--           <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe> -->
        </div>
         <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
 		<div class="circ-wrap">
@@ -168,8 +172,7 @@
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h3>Growing in The Gospel</h3>
       <p class="lead">
-        What’s the vision for advancing the Gospel in this community and beyond?<br>
-        At Trailhead Church, we believe that all who follow Christ are called to a mission of grace.  In order to fulfill that mission, we must be a generous people, a sent people, and a rooted people, and that’s what this campaign is all about.
+        <em>At Trailhead Church, we believe that all who follow Christ are called to a mission of grace.  In order to fulfill that mission, we must be a generous people, a sent people, and a rooted people, and that’s what this campaign is all about.</em>
       </p>
     </div>
   </div>
@@ -179,14 +182,14 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
         <h3>A GENEROUS PEOPLE</h3>
-        <p class="lead">It is our desire that the people of Trailhead Church be the most generous and joyful people in our city - we want to see our town and our neighbors prosper through our efforts.  We do not want  generosity because we feel guilty or because we are trying to support a sense of self-righteousness, but because we have experienced life-changing grace. In 2 Corinthians 8:9, Paul is writing about giving to support the needs of others and says, “For you know the grace of our Lord Jesus Christ, that though He was rich, yet for your sake He became poor, so that you by His poverty might become rich.”  He is saying that Christ was overwhelmingly generous with us; He gave up His glory, His authority, and His life so that we who are sinners and had no hope could be richly blessed with eternal joy and life.  Once we experience Christ’s generosity toward us, we are compelled to generous and sacrificial giving. We give of our time, money, possessions, and ultimately we offer our neighbors the same hope in Christ that we have been given.</p>
+        <p class="justify">It is our desire that the people of Trailhead Church be the most generous and joyful people in our city - we want to see our town and our neighbors prosper through our efforts.  We do not want  generosity because we feel guilty or because we are trying to support a sense of self-righteousness, but because we have experienced life-changing grace. In 2 Corinthians 8:9, Paul is writing about giving to support the needs of others and says, “For you know the grace of our Lord Jesus Christ, that though He was rich, yet for your sake He became poor, so that you by His poverty might become rich.”  He is saying that Christ was overwhelmingly generous with us; He gave up His glory, His authority, and His life so that we who are sinners and had no hope could be richly blessed with eternal joy and life.  Once we experience Christ’s generosity toward us, we are compelled to generous and sacrificial giving. We give of our time, money, possessions, and ultimately we offer our neighbors the same hope in Christ that we have been given.</p>
       </div>
     </div>
     <hr>
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
         <h3>A ROOTED PEOPLE</h3>
-        <p class="lead">While the vision for Trailhead is to equip and send God’s people to engage their communities with the gospel, we realize that the church must also be rooted in our own community. Trailhead has the opportunity to purchase and renovate the historic First Presbyterian Church in one of Edwardsville’s oldest neighborhoods. Our greatest desire for this building is that it would be a useful tool for mission. It will be a place where our congregation can be changed by the gospel and equipped to live in ways that glorify and proclaim Christ. It will be a place where church planters can be trained and supported to carry forth the gospel message. And it will be a placed where we host events that will support the prosperity of our community and meet the needs of our neighbors.</p>
+        <p class="justify">While the vision for Trailhead is to equip and send God’s people to engage their communities with the gospel, we realize that the church must also be rooted in our own community. Trailhead has the opportunity to purchase and renovate the historic First Presbyterian Church in one of Edwardsville’s oldest neighborhoods. Our greatest desire for this building is that it would be a useful tool for mission. It will be a place where our congregation can be changed by the gospel and equipped to live in ways that glorify and proclaim Christ. It will be a place where church planters can be trained and supported to carry forth the gospel message. And it will be a placed where we host events that will support the prosperity of our community and meet the needs of our neighbors.</p>
       </div>
       <div class="text-center col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <a href="#"><img class="img-responsive" src="images/iMac.png"></a> 
@@ -199,7 +202,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
         <h3>A SENT PEOPLE</h3>
-        <p class="lead">We want to engage Edwardsville with the good news of Christ, but we also want to be a part of many other communities experiencing that good news. Trailhead is a church that was planted by another church  and we are now preparing to send out our first church plant. Church planting is in our DNA. We believe that starting new churches is one of the most effective ways to spread the gospel of Christ, and we want to see new churches spring up throughout our region, nation, and world. Already a member of two networks, Acts 29 and Converge, Trailhead plans to become an equipping center for aspiring church planters. We will host training events, support new churches, and take in long-term residents so that future pastors can grow in the skills, character, and spiritual dependence necessary for pastoral ministry.</p>
+        <p class="justify">We want to engage Edwardsville with the good news of Christ, but we also want to be a part of many other communities experiencing that good news. Trailhead is a church that was planted by another church  and we are now preparing to send out our first church plant. Church planting is in our DNA. We believe that starting new churches is one of the most effective ways to spread the gospel of Christ, and we want to see new churches spring up throughout our region, nation, and world. Already a member of two networks, Acts 29 and Converge, Trailhead plans to become an equipping center for aspiring church planters. We will host training events, support new churches, and take in long-term residents so that future pastors can grow in the skills, character, and spiritual dependence necessary for pastoral ministry.</p>
       </div>
     </div>
     <hr>
@@ -214,61 +217,130 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <h3>Growing in Grace</h3>
+      <h3>A Foundation in the Community</h3>
+    </div> 
+  </div>  
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <p class="justify">An important step in equipping Trailhead to be on mission is finding a home of our own here in Edwardsville. The Bible reminds us that the church is not a building it’s the community of Christ-followers. But a building can be a critical tool for Gospel advancement. It can provide the necessary foundation for serving this community and building relationships for the sake of the Gospel.</p><p>After investigating multiple options, it appears that First Presbyterian Church at 237 N. Kansas Street has the greatest potential for Trailhead. The building’s size, character, and location lend itself well to the specific needs of our church and present a number of opportunities for outreach. Since First Presbyterian is preparing to build elsewhere, it appears that God has opened a door. The timing is too coincidental not to pursue this option, and we believe that we are being faithful by doing so.</p>
+          </div>
+          <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#"><img class="img-responsive" src="images/iMac.png"></a>
+          </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <p class="justify">Highlights of First Presbyterian’s facilities include: 
+          <ul>
+            <li>3-story church building built in 1923</li>
+            <li>1 ½ -story classroom building built in 1960</li>
+            <li>4-bedroom house next church built in 1950</li>
+            <li>20,729 square feet of combined building space in the three buildings</li>
+            <li>7 classroom spaces for Trailhead Kids and Student Ministry</li>
+            <li>1.3 acres, including 2 parking lots and a 58’ x 132’ grassy area with gazebo</li>
+          </ul>
+          Other building highlights and opportunities include:
+          <dl>
+            <dt>A Gathering Place for Trailhead</dt>
+            <dd>A home of our own not only for the Sunday morning gathering but also for the family of Trailhead to host important events such as weddings, funerals, retreats, workshops, baby showers, membership classes, etc.</dd>
+            <dt>A Launchpad for Local Mission</dt>
+            <dd>A place to engage our community by hosting public concerts, lectures, forums and special events like “Affordable Christmas.”</dd>
+            <dt>A Place for Supporting Regional and National Mission</dt>
+            <dd>Space to host regional and national conferences and training sessions for church planters, missionaries, pastors, and lay leaders.</dd>
+
+            <dt>Freedom to use the space and parking lot at any time</dt>
+            <dt>90-year old sacred space with history and character</dt>
+            <dt>Located in established neighborhood near current location</dt>
+            <dt>Large fellowship hall, kitchen space, offices, multiple restrooms</dt>
+            <dt>Current sanctuary holds 250, simple renovations would add seating for an additional 50-60</dt>
+          </dl>
+        </p>
+      </div>
+      <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <a href="#"><img class="img-responsive" src="images/iMac.png"></a> 
+      </div>
+    </div>
+    <hr>
+  </div><!-- / CONTAINER-->
+</section>
+<!-- / SECTION-3 --> 
+
+<!-- / SECTION-4 --> 
+<section id="Section-4">
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+    <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h3>How do we get there?</h3>
       <p class="lead">
-        “For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” Ephesians 2:8-9
+        <em>To purchase and renovate the First Presbyterian building and provide our goal is to raise $550,000 over 3 Years through pledges from Trailhead Church’s members and friends.</em>
+      </p>
+    </div> 
+  </div>  
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <h3>Where will the money go?</h3>
+            <p class="justify">WHERE WILL THE MONEY GO?
+              <ul>
+                <li>$85,000 for down payment on building</li>
+                <li>$300,000 for repairs, renovations and updates</li>
+                <li>$110,000 toward paying down the note</li>
+                <li>$55,000 for church-planting</li>
+                <li>$550,000 Fund-Raising Goal</li>
+              </ul>
+            </p>
+          </div>
+          <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#"><img class="img-responsive" src="images/iMac.png"></a>
+          </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <h3>Timeline</h3>
+        <p class="justify">
+          Insert images
+        </p>
+      </div>
+      <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <a href="#"><img class="img-responsive" src="images/iMac.png"></a> 
+      </div>
+    </div>
+  </div><!-- / CONTAINER-->
+</section>
+<!-- / SECTION-4 -->
+
+<section id="Section-5">
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+    <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h3>Rooted in Grace</h3>
+      <p class="lead">
+        <em>“For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” </em>-Ephesians 2:8-9
       </p>
     </div> 
   </div>  
   
   <div class="row">
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-    <div class="circ-wrap">
-      <i class="icon-question icon-4x"></i>
-    </div>
-          <h3>WHO IS TRAILHEAD CHURCH?</h3>
+        <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          <h3>Pray</h3>
           <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville- to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there we move out as a community on mission working to grow God’s kingdom and bring glory to His name.</p>
+          <button type="button" class="btn btn-primary">Join Us in Prayer</button>
         </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="circ-wrap">
-      <i class="icon-user icon-4x"></i>
-      </div>
-          <h3>STORIES OF GRACE</h3>
-          <p class="justify">On a daily basis we encounter people who have tasted God’s grace and want to talk about it. In the video below, meet three families at Trailhead and hear how their stories have been impacted by the grace of God.</p>
-          <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe>
-       </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-    <div class="circ-wrap">
-      <i class="icon-comment icon-4x"></i>
-      </div>
-          <h3>TELL US YOUR STORY</h3>
-          <p class="justify">We love hearing about how God has worked and is working in the lives of His people. Tell us how you’ve been impacted by the Gospel and shown God’s grace:</p>
-          <div id="contact">
-            <div id="form-wrapper">
-            <div id="form-error" class="form-error"></div>
-            <form role="form" action="">
-              <div class="form-group">
-                <input name="contact-name" type="text" class="form-control" id="contact-name" placeholder="Enter name">
-                <label class="error" for="contact-name" id="name-error">This field is required.</label>
-              </div>
-              <div class="form-group">
-                <input name="contact-email" type="email" class="form-control" id="contact-email" placeholder="Enter email">
-                <label class="error" for="contact-email" id="email-error">A valid email address is required.</label>
-              </div>
-              <div class="form-group">
-                <textarea name="contact-message" class="form-control" id="contact-message" placeholder="Enter your message"></textarea>
-                <label class="error" for="contact-message" id="message-error">This field is required.</label>
-              </div>
-              <button type="submit" class="btn btn-default contact-submit">Submit</button>
-            </form>
-            </div> <!-- /#form-wrapper -->
-          </div> <!-- /#contact -->
+        <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          <h3>Give</h3>
+          <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville- to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there we move out as a community on mission working to grow God’s kingdom and bring glory to His name.</p>
+          <button type="button" class="btn btn-primary">Give Now</button>
         </div>
   </div>
   
   </div><!-- / CONTAINER-->
+
 </section>
-<!-- / SECTION-3 --> 
+
+<!-- / SECTION-5 -->
 
 
       
@@ -321,7 +393,7 @@ jQuery(document).ready(function(){
 	jQuery('.well').parallax("50%", 0.1);
   jQuery('#head-top').parallax("50%", 0.3);
 	//jQuery('#section-2').parallax("50%", 0.1);
-	//jQuery('#section-3').parallax("50%", 0.1);
+	jQuery('#Section-5').parallax("0%", 0.3);
 
 })
 </script>
