--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
     <!-- Example row of columns -->
     <div class="row">
 		<div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="icon-wrap">
+      <img src="images/rooted.png">
+    </div>
 			<h3>Rooted in Grace</h3>
 			<p class="lead">
 				<em>“For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” </em>-Ephesians 2:8-9
@@ -170,6 +173,9 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="icon-wrap">
+      <img src="images/growing.png">
+    </div>
       <h3>Growing in The Gospel</h3>
       <p class="lead">
         <em>At Trailhead Church, we believe that all who follow Christ are called to a mission of grace.  In order to fulfill that mission, we must be a generous people, a sent people, and a rooted people, and that’s what this campaign is all about.</em>
@@ -217,6 +223,9 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="icon-wrap">
+      <img src="images/foundation.png">
+    </div>
       <h3>A Foundation in the Community</h3>
     </div> 
   </div>  
@@ -272,6 +281,9 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="icon-wrap">
+      <img src="images/joinus.png">
+    </div>
       <h3>How do we get there?</h3>
       <p class="lead">
         <em>To purchase and renovate the First Presbyterian building and provide our goal is to raise $550,000 over 3 Years through pledges from Trailhead Church’s members and friends.</em>
@@ -316,9 +328,9 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="page-header text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <h3>Rooted in Grace</h3>
+      <h3>Join Us On Mission</h3>
       <p class="lead">
-        <em>“For by grace you have been saved through faith. And this is not your own doing; it is the gift of God, not a result of works, so that no one may boast.” </em>-Ephesians 2:8-9
+        <em>Our hope is to proclaim the gospel of Christ to our community, train and send out church planters, and purchase and renovate a historic church building. To accomplish these goals, we need help from as many sources as possible.  Please consider supporting our efforts in the following ways:</em>
       </p>
     </div> 
   </div>  
@@ -326,13 +338,30 @@
   <div class="row">
         <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <h3>Pray</h3>
-          <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville- to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there we move out as a community on mission working to grow God’s kingdom and bring glory to His name.</p>
-          <button type="button" class="btn btn-primary">Join Us in Prayer</button>
+          <p>If you would like to commit to pray for our church, please subscribe below for regular email updates:</p>
+          <div id="email-subscribe">
+            <div id="form-wrapper-2">
+            <div id="form-error-2" class="form-error"></div>
+            <form role="form-2" action="">
+              <div class="form-group">
+                <input name="contact-name-2" type="text" class="form-control" id="contact-name-2" placeholder="Enter name">
+                <label class="error" for="contact-name" id="name-error-2">This field is required.</label>
+              </div>
+              <div class="form-group">
+                <input name="contact-email-2" type="email" class="form-control" id="contact-email-2" placeholder="Enter email">
+                <label class="error" for="contact-email-2" id="email-error-2">A valid email address is required.</label>
+              </div>
+              <button type="submit" class="btn btn-default btn-large contact-submit">Submit</button>
+            </form>
+            </div> <!-- /#form-wrapper-2 -->
+          </div> <!-- /#email-subscribe -->
+          <!-- <button type="button" class="btn btn-primary">Join Us in Prayer</button> -->
         </div>
         <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <h3>Give</h3>
-          <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville- to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there we move out as a community on mission working to grow God’s kingdom and bring glory to His name.</p>
-          <button type="button" class="btn btn-primary">Give Now</button>
+          <p class="justify">Ministry requires resources, sacrifice, and generosity.  In this case, purchasing and renovating a historic church building is a costly undertaking, and all gifts are greatly appreciated.  Click below to financially support Trailhead Church’s endeavors.
+</p>
+          <button type="button" class="btn btn-default btn-large">Give Now</button>
         </div>
   </div>
   
