--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div class="text-center col-md-6">
               <!-- <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe> -->
-              <iframe src="//player.vimeo.com/video/74022335" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              <iframe src="//player.vimeo.com/video/77893426?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           </div> <!-- /.row -->
           <div class="row">
