removed some ems

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
       <img src="images/ourplan.png">
     </div>
       <p class="lead">
-        Our goal is to purchase and renovate the First Presbyterian building and to raise </em><strong>$550,000 over 3 Years</strong><em> through pledges from Trailhead Church’s members and friends.
+        Our goal is to purchase and renovate the First Presbyterian building and to raise <strong>$550,000 over 3 Years</strong> through pledges from Trailhead Church’s members and friends.
       </p>
     </div> 
   </div>  
