--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
   </div>  
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <p class="justify">An important step in equipping Trailhead to be on mission is finding a home of our own here in Edwardsville. The Bible reminds us that the church is not a building - it’s the community of Christ-followers. But a building can be a criti- cal tool for Gospel advancement. It can provide the necessary foundation for serving this community and building relationships for the sake of the Gospel.</p>
+            <p class="justify">An important step in equipping Trailhead to be on mission is finding a home of our own here in Edwardsville. The Bible reminds us that the church is not a building - it’s the community of Christ-followers. But a building can be a critical tool for Gospel advancement. It can provide the necessary foundation for serving this community and building relationships for the sake of the Gospel.</p>
             <p class="justify">It appears that First Presbyterian Church at 237 N. Kansas Street has the greatest potential for Trailhead. The building’s size, character, and location lend itself well to the specific needs of our church and present a number of opportunities for outreach.</p>
           </div>
           <div class="text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -352,7 +352,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
           <strong>December 15</strong>
-          <br>First Fruits Giving SUnday
+          <br>First Fruits Giving Sunday
         </div>
       </div>
       <div class="row">
