--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	</div>	
 	
 	<div class="row">
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
 		<!-- <div class="circ-wrap"> -->
 			<i class="icon-question icon-4x"></i>
 		<!-- </div> -->
@@ -124,16 +124,14 @@
           <p class="justify">God has shown us tremendous grace. Which is why in 2008, we planted a church here in Edwardsville - to share God’s love and His message of redemption through Christ. We are rooted in that grace - that underserved generosity - and from there, we move out as a community on mission, working to grow God’s kingdom and bring glory to His name.</p>
           <p class="justify">Our core values, Truth, Community, Worship , Prayer and Mission, are informed by those of the first Christian church, as described in Acts 2:42 and 46. Trailhead Church can be described in the following statement: “Walking in Christ as a Community on Mission.”</p>
         </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
-			<!-- <div class="circ-wrap"> -->
+<!--         <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
 			<i class="icon-user icon-4x"></i>
-			<!-- </div> -->
+
           <h3>STORIES OF GRACE</h3>
           <p class="justify">On a daily basis we encounter people who have tasted God’s grace and want to talk about it. In the video below, meet three families at Trailhead and hear how their stories have been impacted by the grace of God.</p>
           <h4>Coming Soon</h4>
-<!--           <iframe width="100%" height="300" src="//www.youtube.com/embed/-aLYvZ5sX28?wmode=transparent" frameborder="0" allowfullscreen></iframe> -->
-       </div>
-        <div class="text-center box col-xs-12 col-sm-6 col-md-4 col-lg-4">
+       </div> -->
+        <div class="text-center box col-xs-12 col-sm-6 col-md-6 col-lg-6">
 		<!-- <div class="circ-wrap"> -->
 			<i class="icon-comment icon-4x"></i>
 			<!-- </div> -->
@@ -538,6 +536,17 @@ jQuery('.navbar .nav > li > a').click(function(){
 
 
 <script src="assets/js/scripts.js" type="text/javascript"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-34095319-2', 'trailheadonline.org');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
