enabled giving button

--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
           <h3>Give</h3>
           <p class="justify">Ministry requires resources, sacrifice, and generosity.  In this case, purchasing and renovating a historic church building is a costly undertaking, and all gifts are greatly appreciated.  Click below to financially support Trailhead Church’s endeavors.
 </p>
-          <h4>Note: Online Giving will be available on Monday, October 28th.</h4>
-          <a class="btn disabled btn-large btn-disabled" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
+          <a class="btn btn-large btn-disabled" href="https://trailheadchurch.givingfire.com" target="_blank">Give Now</a>
         </div>
   </div>
   
