--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
           <h2>Visit</h2>
           <p class="justify">We would love for you to join with us as we gather on Sunday mornings to worhsip. We have services at 9am and 11am, with childcare provided at both services. <pre>101 W. Vandalia St. <br>Edwardsville, IL 62025 (<a href="https://maps.google.com/maps?ie=UTF8&cid=13221485590594205122&q=Trailhead+Church&gl=US&hl=en&t=h&ll=38.811306,-89.956527&spn=0.003344,0.00427&z=16&iwloc=A&source=embed"><i class="icon-map-marker icon-large" style="padding-right: 2px"></i>map</a>)</pre>
           </p>
-          <a class="btn btn-large" href="http://trailheadonline.org" target="_blank">More Info</a>
+          <a class="btn btn-large" href="http://trailheadonline.org/edwardsville" target="_blank">More Info</a>
         </div>
         <div class="text-center box col-xs-12 col-sm-4 col-md-4 col-lg-4">
           <h2>Pray</h2>
